# nocq

./: CMakeLists.txt  Dockerfile  README.md  test.game
cp_nocq/: nocq_chuffed.cpp  nocq_gecode.cpp  winning_conditions.h
docs/: nocq.drawio
examples/: SAT.aut  SAT.dzn  chaloupka-2011.aut  chaloupka-2011.dzn  chatterjee-2005.aut  cliquegame-100_-10_10.gmw  jurd-2-1.aut  jurd-2-1.dzn  jurd-3-2.aut  jurd-3-2.dzn  rand_50_20_1_5_-20_30.gmw  sqnc01-3.aut  sqnc01-3.dzn  sqnc01-4.aut  wiki.aut  wiki.dzn
experiments/: ex4.cpp
resources/: correctness.sh  debugchuffed.h  debugstd.h  noc-parallel.sh  nocq-parallel.sh  peakmemory.h  proof-eager-noc.sh  proof-eager.sh  readme.txt
src/: main.cpp
src/cp_nocq/: nocq_cadical.cpp  nocq_chuffed.cpp  nocq_chuffed_bool.cpp  nocq_chuffed_int.cpp  nocq_gecode.cpp  winning_conditions.h
src/utils/: dbg.h  fra.cpp  fra.h  game.cpp  game.h  parameters.h  satencoder.cpp  satencoder.h  tarjan.cpp  tarjan.h  zielonka.cpp  zielonka.h
src/various/: game.h  satencoder.cpp  tarjan.cpp  tarjan.h  zielonka.cpp  zielonka.h
various/: fra.cpp  fra.h  game.cpp  game.h  satencoder.cpp  satencoder.h  tarjan.cpp  tarjan.h  zielonka.cpp  zielonka.h
